--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -118,21 +118,17 @@ The catch during the post-monsoon part of the season should be correlated with f
 
 We investigated correlations between environmental variables and sardine catch during different times of the year using generalized additive models [GAMs, @Wood2017].  GAMs allow one to model the effect of a covariate as a flexible non-linear function and it was known that the effects of the environmental covariates were likely to be non-linear, albeit in an unknown way.  Our approach is analogous to that taken by Jacobson and MacCall [-@JacobsonMacCall1995] in a study of the effects of SST on Pacific sardine recruitment.  We modeled the catches during the late-spawning season (quarter 3) separately from the post-summer monsoon season (October to June).  The quarter 3 catch has a different size-distribution as it often is extremely bi-modal with a peak of small sardines from the current spawning.  The covariates that affect the timing of spawning and the early egg and larval survival may be different and the fishing closure from July to mid-August may also affect the correlations.  
 
-The objective of our analysis was to determine if environmental covariates can explain variation in catch that cannot be explained solely by the prior catch, i.e. can environmental variables explain catch anomalies.  The use of time series models, such as ARIMA models, has been used for forecasting oil sardine catch from past catch [@Srinath1998] and has a long tradition in fisheries for forecasting catch from catch time series for other species [@StergiouChristou1996].  We used generalized additive models instead of auto-regressive (ARIMA) models to allow the effect of past catch to be non-linear and because there was little support for including auto-regressive errors based on diagnostic tests of the residuals.  This lack of strong autocorrelation in residuals has been found in other studies on forecasting catch from past catches  [@StergiouChristou1996].
+The objective of our analysis was to determine if environmental covariates can explain variation in catch that cannot be explained solely by the prior catch, i.e. can environmental variables explain catch anomalies.  The use of time series models, such as ARIMA models, has been used for forecasting oil sardine catch from past catch [@Srinath1998] and has a long tradition in fisheries for forecasting landings for other fish species [@Mendelssohn1981; @CohenStone1987; @NobelSathianandan1991; @StergiouChristou1996; @VenugopalanSrinath1998; @Lloretetal2000; @Georgakarakosetal2006; @Lawer2016 ].  We used generalized additive models instead of auto-regressive (ARIMA) models to allow the effect of past catch to be non-linear and because there was little support for including auto-regressive errors based on diagnostic tests of the residuals.  This lack of strong autocorrelation in residuals has been found in other studies on forecasting catch from past catches  [@StergiouChristou1996]. GAMs allow one to model the effect of a covariate as a flexible non-linear function and it was known that the effects of the environmental covariates were likely to be non-linear, albeit in an unknown way.  Our approach is similar to that taken by Jacobson and MacCall [-@JacobsonMacCall1995] in a study of the effects of SST on Pacific sardine recruitment.
 
 The first step in our analysis was to determine the catch model: the model for current catch as a function of the past catch.  Once a sufficient model for the catch was determined, the covariates were studied individually and then jointly.  F-tests and AIC on nested sets of GAM models [@Woodetal2016] were used to evaluate the support for the catch models and later the covariate models.  One feature of GAMs is that they allow the ‘flexibility’ or smoothing parameter of the response curve to be estimated. However we fixed the degree of flexibility so that reasonably smooth responses were achieved and to limit the flexibility of the models being fit.  Multi-modal or overly flexible response curves would not realistic for our application.  We used GAMs with smooth terms represented by penalized regression splines [@Wood2011, using the mgcv package in R] and fixed the smoothing term at an intermediate value (sp=0.6).
 
 Our catch models took the form
-$$ln(C_t) = \alpha + s_1(ln(C_{t-1})) + s_2(ln(C_{t-2})) + \epsilon$$
-where $ln(C_t)$ is the log catch in the current year $t$ and was defined as either 3rd quarter catch $S_t$ (Jul-Aug) or post-summer monsoon catch $N_t$ (Oct-Jun) depending on which period we were studying.  The catches were logged to stabilize and normalize the variance.  The model is primarily statistical, meaning it should not be thought of as being a population growth model.  We tested models with prior year catch ($C_{t-1}$) defined as post-summer monsoon (Oct-Jun) catch ($N_{t-1}$) or late-summer monsoon (Jul-Sep) catch ($S_{t-1}$) as the explanatory catch variable. The catch models were fit to 1982 to 2015 catch data, corresponding to the years where the SST, upwelling and precipitation data were available.  The catch model was selected via F-tests and AIC on nested sets of GAM models.  After selection the best model with the 1982-2015 data, the fitting was repeated with the 1955 to 1981 catch data to confirm the form of the catch models.
+$$ln(C_{i,t}) = \alpha + s_1(ln(C_{j,t-1})) + s_2(ln(C_{k,t-2})) + \epsilon$$
+where $ln(C_{i,t})$ is the log catch in the current year $t$ in season $i$.  We modeled two different seasons: 3rd quarter catch $C_{m,t}$ (Jul-Sep) which is during the late part of the summer monsoon and post-summer monsoon catch $C_{p,t}$ (Oct-Jun).  We divided the catch in this way for biological reasons.  Catch in the 3rd quarter (July-Sep) captures a mix of spawning age fish as it overlaps with the tail end of the spawning season, catches are affected by the monsoon fishery closure from July to mid-August, and small 0-year fish often appear in the catch in August and September.  The catches were logged to stabilize and normalize the variance.  The model is primarily statistical, meaning it should not be thought of as being a population growth model.  We tested models with prior year post-summer monsoon catch ($C_{p,t-1}$) and 3rd quarter catch catch ($C_{m,t-1}$) as the explanatory catch variable. The catch models were fit to 1982 to 2015 catch data, corresponding to the years where the SST, upwelling and precipitation data were available.  The catch model was selected via F-tests and AIC on nested sets of GAM models.  After selection the best model with the 1982-2015 data, the fitting was repeated with the 1955 to 1981 catch data to confirm the form of the catch models.
 
-Once the catch models were determined, the covariates were studied individually and then jointly using catch anomalies as the response variable. The catch anomaly is defined as the difference between the observed catch and the predicted catch from a model using catch in prior years with no environmental covariates. As with the catch models, F-tests and AIC on nested sets of GAM models [@Woodetal2016] were used to evaluate the support for models.  The smoothing term was fixed at an intermediate value (sp=0.6) instead of treated as an estimated variable.
-
-Our models for catch in late-spawning season (June to September or quarter 3) took the form
-$$ln(S_t) - s_1(ln(C_{t-1})) + s_2(ln(C_{t-2})) = \alpha + f_1(c_1) + f_2(c_2) + \epsilon$$
-The left-hand side is the catch anomaly where the $s_1()$ and $s_2()$ functions define the catch model selected in the first part of our analysis.  Catch in the 3rd quarter (July-Aug) captures a mix of spawning age fish as it overlaps with the tail end of the spawning season---the fishery is closed July to mid-August during the height of the summer monsoon and spawning season---and small 0-year fish from early June spawning.  The model seeks to explain the 3rd quarter catch anomalies via a non-linear function of the covariates, $c_1$ and $c_2$.  The covariates tested are those discussed in the section on covariates that have been hypothesized to drive the size of the spawning biomass exposed to the fishery.  The relevant covariate may be in the concurrent with the catch or in a prior year.  The model for catch in the post-summer monsoon quarters (October to June) took a similar form:
-$$ln(N_t) - s_1(ln(C_{t-1})) + s_2(ln(C_{t-1})) = \alpha + f_1(c_1) + f_2(c_2) + \epsilon$$
-where the left-hand side is the catch anomaly for the total catch in the post-summer monsoon October to June (a nine-month period that spans two calendar years). The covariates tested are those discussed in the section on covariates that have been hypothesized to drive both survival and growth of juvenile fish and the factors that lead to feeding of fish inshore and thus exposed to the coastal fishery.
+Once the catch models were determined, the covariates were studied individually and then jointly. As with the catch models, F-tests and AIC on nested sets of GAM models [@Woodetal2016] were used to evaluate the support for models with covariates.  The smoothing term was fixed at an intermediate value (sp=0.6) instead of treated as an estimated variable.  Our models for catch with covariates took the form
+$$ln(C_{i,t}) = \alpha + s_1(ln(C_{j,t-1})) + s_2(ln(C_{k,t-2})) + f_1(c_1) + f_2(c_2) + \epsilon$$
+The catch model (the $s_1$ and $s_2$) were fixed at the best model from step 1.  The covariate model seeks to explain unexplained variance via a non-linear function of the covariates, $c_1$ and $c_2$.  The covariates tested are those discussed in the section on covariates that have been hypothesized to drive the size of the biomass exposed to the fishery.  
 
 
 # Results
