--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -27,11 +27,14 @@ bibliography: '`r system.file("docs", "Sardine.bib", package = "SardineForecast"
 # Introduction
 
 <!-- indian oil sardine is important -->
-The Indian oil sardine (*Sardinella longiceps* Valenciennes, 1847) is one of the most commercially important fish resources along the southwest coast of India (Figure `r ref("fig:studyarea")`) and comprises ca 25% of the catch biomass [@Vivekanandanetal2003].  Landings of the Indian oil sardine are highly seasonal and peak during and after the summer monsoon period (June through September), in conjunction with the onset and early relaxation of coastal upwelling. However, the landings of this small pelagic finfish are also highly variable from year to year.  Small pelagics often exhibit high variability due to the effects of environmental conditions on survival and recruitment [@Checkleyetal2009].  In addition, the Indian oil sardine fishery is largely coastal and artisanal thus migration of fish schools in and out of the coastal zone greatly affects exposure to the fishery.
+The Indian oil sardine (*Sardinella longiceps* Valenciennes, 1847) is one of the most commercially important fish resources along the southwest coast of India (Figure `r ref("fig:studyarea")`) and historically has comprised approximately 25% of the catch biomass [@Vivekanandanetal2003].  Landings of the Indian oil sardine are highly seasonal and peak during and after the summer monsoon period (June through September), in conjunction with the onset and early relaxation of coastal upwelling. However, the landings of this small pelagic finfish are also highly variable from year to year.  Small pelagics often exhibit high variability due to the effects of environmental conditions on survival and recruitment [@Checkleyetal2009].  In addition, the Indian oil sardine fishery is largely coastal and artisanal thus migration of fish schools in and out of the coastal zone greatly affects exposure to the fishery.
 
 <!-- review of looking at env vars -->
 Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine.  Precipitation during the southwest monsoon [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1972; @Jayaprakash2002] and the day of the monsoon arrival [@Jayaprakash2002] is thought to act as either a direct or indirect cue for spawning.  Many studies have looked for correlations between precipitation, however the reported effects are positive in some studies and negative in others. Researchers have also found correlations with various metrics of upwelling intensity during the post-monsoon period [@LonghurstWooster1990; @Madhupratapetal1994; @Jayaprakash2002; @Krishnakumaretal2008; @Thara2011] and with direct measures of productivity, such as nearshore zooplankton and phytoplankton abundance [@Hornell1910; @Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012].  Researchers have also found correlations with sea surface temperature (SST); SST  can affect both somatic growth rates and juvenile survival but also can cause fish to move off-shore and away from the shore-based fishery [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991].
-In this paper, we revisit the analysis of environmental covariates that correlate with oil sardine catch using environmental covariates measured via remote-sensing.  Remote-sensing data give us a longer time-series of environmental data and over a wide spatial extent at a daily and monthly resolution.  A better understanding of how and whether remote sensing data explains variation in seasonal catch will help us understand both how the environment affects population dynamics and how remote sensing can be used to help predict favorable and unfavorable years for landings.
+
+
+In this paper, we revisit forecasting of oil sardine landings using environmental covariates to improve forecast accuracy.  We specifically focus on environmental covariates measured via remote-sensing.  Remote-sensing data give us time series of environmental data over a wide spatial extent at a daily and monthly resolution and at low cost.  A better understanding of how and whether remote sensing data explains variation in seasonal catch will give insights into how the environment affects landings and how (and whether) remote sensing can be used to help improve our forecasts. To model landings, we use autoregressive time-series models (Box-Jenkins models).  Forecasting landings data (catch) using time-series models has a long tradition in fisheries and has been applied to many species [@Mendelssohn1981; @CohenStone1987; @NobelSathianandan1991; @StergiouChristou1996;  @Lloretetal2000; @Georgakarakosetal2006; @Pristaetal2011; @Lawer2016 ], including oil sardines [@Srinath1998; @VenugopalanSrinath1998].  Unlike prior work on landings models with covariates, we use non-linear time-series models to allow a flexible effect of covariates and past catch on current landings.
+
 
 <!-- Based on biological information concerning how environmental conditions in the coastal waters affect spawning density, exposure of sardines to the coastal fishery, and larval and juvenile sardine survival, we develop a set of hypotheses about which remote-sensing covariates should correlate with current or future landings.  We use generalized additive modelling of the landing data with remote-sensing covariates to test for these correlations.  -->
 <!-- closing is objective of the paper -->
@@ -116,19 +119,26 @@ The catch during the post-monsoon part of the season should be correlated with f
 
 ## Explanatory models
 
-We investigated correlations between environmental variables and sardine catch during different times of the year using generalized additive models [GAMs, @Wood2017].  GAMs allow one to model the effect of a covariate as a flexible non-linear function and it was known that the effects of the environmental covariates were likely to be non-linear, albeit in an unknown way.  Our approach is analogous to that taken by Jacobson and MacCall [-@JacobsonMacCall1995] in a study of the effects of SST on Pacific sardine recruitment.  We modeled the catches during the late-spawning season (quarter 3) separately from the post-summer monsoon season (October to June).  The quarter 3 catch has a different size-distribution as it often is extremely bi-modal with a peak of small sardines from the current spawning.  The covariates that affect the timing of spawning and the early egg and larval survival may be different and the fishing closure from July to mid-August may also affect the correlations.  
+We modeled the catches during the late-spawning season (quarter 3) separately from the post-summer monsoon season (October to June).  Thus there is no seasonalily in our catch time series, as we analyzed a yearly time series of quarter 3 catches separately from a yearly time series of post-monsoon catches.  We divided the catch in this way for biological reasons.  Catch in the 3rd quarter (July-Sep) captures a mix of spawning age fish as it overlaps with the tail end of the spawning season, is affected by a fishery closure from July to mid-August during the monsoon, and is periodically inflated by the appearance of small 0-year fish from early summer spawning.  In addition, the covariates that affect the timing of spawning and the early egg and larval survival may be different than those that affect later growth, survival and  shoaling that exposes fish to the inshore fishery.  
 
-The objective of our analysis was to determine if environmental covariates can explain variation in catch that cannot be explained solely by the prior catch, i.e. can environmental variables explain catch anomalies.  The use of time series models, such as ARIMA models, has been used for forecasting oil sardine catch from past catch [@Srinath1998] and has a long tradition in fisheries for forecasting landings for other fish species [@Mendelssohn1981; @CohenStone1987; @NobelSathianandan1991; @StergiouChristou1996; @VenugopalanSrinath1998; @Lloretetal2000; @Georgakarakosetal2006; @Lawer2016 ].  We used generalized additive models instead of auto-regressive (ARIMA) models to allow the effect of past catch to be non-linear and because there was little support for including auto-regressive errors based on diagnostic tests of the residuals.  This lack of strong autocorrelation in residuals has been found in other studies on forecasting catch from past catches  [@StergiouChristou1996]. GAMs allow one to model the effect of a covariate as a flexible non-linear function and it was known that the effects of the environmental covariates were likely to be non-linear, albeit in an unknown way.  Our approach is similar to that taken by Jacobson and MacCall [-@JacobsonMacCall1995] in a study of the effects of SST on Pacific sardine recruitment.
+We tested ARIMA models on both oil sardine catch time series and found little support for auto-regressive errors (ARIMA models with a MA component) based on diagnostic tests of the residuals and model selection. The best supported ARIMA models were simple AR models ($x_t = b x_{t-1} + \eta$). This lack of strong autocorrelation in residuals has been found in other studies that tested ARIMA models for forecasting oil sardine catch [@StergiouChristou1996].  We thus used AR-only models, however we tested both linear and non-linear models using a form of generalized additive model (GAM).  The landings models were fit using conditional sum of squares (conditioning on the first 1 or 2 landings values in the time series).
 
-The first step in our analysis was to determine the catch model: the model for current catch as a function of the past catch.  Once a sufficient model for the catch was determined, the covariates were studied individually and then jointly.  F-tests and AIC on nested sets of GAM models [@Woodetal2016] were used to evaluate the support for the catch models and later the covariate models.  One feature of GAMs is that they allow the ‘flexibility’ or smoothing parameter of the response curve to be estimated. However we fixed the degree of flexibility so that reasonably smooth responses were achieved and to limit the flexibility of the models being fit.  Multi-modal or overly flexible response curves would not realistic for our application.  We used GAMs with smooth terms represented by penalized regression splines [@Wood2011, using the mgcv package in R] and fixed the smoothing term at an intermediate value (sp=0.6).
+We investigated correlations between environmental variables and sardine catch  using generalized additive models [GAMs, @Wood2017].  GAMs allow one to model the effect of a covariate as a flexible non-linear function and it was known that the effects of the environmental covariates were likely to be non-linear, albeit in an unknown way.  Our approach is analogous to that taken by Jacobson and MacCall [-@JacobsonMacCall1995] in a study of the effects of SST on Pacific sardine recruitment.  
+
+The first step in our analysis was to determine the catch model: the model for current catch as a function of the past catch.  One feature of GAMs is that they allow the ‘flexibility’ or smoothing parameter of the response curve to be estimated. However we fixed the degree of flexibility so that reasonably smooth responses were achieved and to limit the flexibility of the models being fit.  Multi-modal or overly flexible response curves would not realistic for our application.  We used GAMs with smooth terms represented by penalized regression splines [@Wood2011, using the mgcv package in R] and fixed the smoothing term at an intermediate value (sp=0.6).
 
 Our catch models took the form
-$$ln(C_{i,t}) = \alpha + s_1(ln(C_{j,t-1})) + s_2(ln(C_{k,t-2})) + \epsilon$$
-where $ln(C_{i,t})$ is the log catch in the current year $t$ in season $i$.  We modeled two different seasons: 3rd quarter catch $C_{m,t}$ (Jul-Sep) which is during the late part of the summer monsoon and post-summer monsoon catch $C_{p,t}$ (Oct-Jun).  We divided the catch in this way for biological reasons.  Catch in the 3rd quarter (July-Sep) captures a mix of spawning age fish as it overlaps with the tail end of the spawning season, catches are affected by the monsoon fishery closure from July to mid-August, and small 0-year fish often appear in the catch in August and September.  The catches were logged to stabilize and normalize the variance.  The model is primarily statistical, meaning it should not be thought of as being a population growth model.  We tested models with prior year post-summer monsoon catch ($C_{p,t-1}$) and 3rd quarter catch catch ($C_{m,t-1}$) as the explanatory catch variable. The catch models were fit to 1982 to 2015 catch data, corresponding to the years where the SST, upwelling and precipitation data were available.  The catch model was selected via F-tests and AIC on nested sets of GAM models.  After selection the best model with the 1982-2015 data, the fitting was repeated with the 1955 to 1981 catch data to confirm the form of the catch models.
+\begin{gathered}
+random walk: ln(C_{i,t}) = \alpha + ln(C_{j,t-1})) + \epsilon\\
+AR-1: ln(C_{i,t}) = \alpha + \phi_1 ln(C_{j,t-1})) + \epsilon\\
+AR-2: ln(C_{i,t}) = \alpha + \phi_1 ln(C_{j,t-1})) + \phi_2 ln(C_{k,t-2})) + \epsilon\\
+non-linear: ln(C_{i,t}) = \alpha + s_1(ln(C_{j,t-1})) + s_2(ln(C_{k,t-2})) + \epsilon
+\end{gathered}
+where $ln(C_{i,t})$ is the log catch in the current year $t$ in season $i$. We modeled two different seasons: 3rd quarter catch $C_{m,t}$ (Jul-Sep) which is during the late part of the summer monsoon and post-summer monsoon catch $C_{p,t}$ (Oct-Jun).  The catches were logged to stabilize and normalize the variance.  $s()$ is a non-linear function estimated by the GAM algorithm.  The model is primarily statistical, meaning it should not be thought of as being a population growth model.  We tested models with prior year post-summer monsoon catch ($C_{p,t-1}$) and 3rd quarter catch catch ($C_{m,t-1}$) as the explanatory catch variable. The catch models were fit to 1982 to 2015 catch data, corresponding to the years where the SST, upwelling and precipitation data were available.  F-tests and AIC on nested sets of models [@Woodetal2016] were used to evaluate the support for the catch models and later for the covariate models.  After selection the best model with the 1982-2015 data, the fitting was repeated with the 1955 to 1981 catch data to confirm the form of the catch models.
 
 Once the catch models were determined, the covariates were studied individually and then jointly. As with the catch models, F-tests and AIC on nested sets of GAM models [@Woodetal2016] were used to evaluate the support for models with covariates.  The smoothing term was fixed at an intermediate value (sp=0.6) instead of treated as an estimated variable.  Our models for catch with covariates took the form
-$$ln(C_{i,t}) = \alpha + s_1(ln(C_{j,t-1})) + s_2(ln(C_{k,t-2})) + f_1(c_1) + f_2(c_2) + \epsilon$$
-The catch model (the $s_1$ and $s_2$) were fixed at the best model from step 1.  The covariate model seeks to explain unexplained variance via a non-linear function of the covariates, $c_1$ and $c_2$.  The covariates tested are those discussed in the section on covariates that have been hypothesized to drive the size of the biomass exposed to the fishery.  
+$$ln(C_{i,t}) = M + f_1(c_1) + f_2(c_2) + \epsilon$$
+where $M$ was the best catch model from step 1.  The covariate model seeks to explain unexplained variance in the the catch model via a linear or non-linear function of the covariates, $c_1$ and $c_2$.  The covariates tested are those discussed in the section on covariates that have been hypothesized to drive the size of the biomass exposed to the fishery.  
 
 
 # Results
