--- a/Table_Hypotheses.Rmd
+++ b/Table_Hypotheses.Rmd
@@ -66,7 +66,7 @@ HS3 = data.frame(
 HS4 = data.frame(
   Life="",
   Time="",
-  Hyp="HS4.  Extremely high upwelling brings poorly oxygenated water to the surface causing sardines to move offshore [@Pillaietal1991].",
+  Hyp="HS4.  Extremely high upwelling brings poorly oxygenated water to the surface causing sardines to move offshore [@Pillai1991].",
   Response="Catch Q3 year t",
   Cov="Average upwelling index Jun-Sep, Max upwelling index Jun-Sep in year t",
   stringsAsFactors=FALSE)
@@ -81,7 +81,7 @@ HS5 = data.frame(
 
 HL1 = data.frame(
   Life="Larvae",
-  Time="July-Oct",
+  Time="Jul-Oct",
   Hyp="HL1.  Larval mortality is higher in colder water due to low motility causing increased predation and slower somatic growth. Low SST is also associated with strong upwelling which advects larvae into offshore waters and brings poorly oxygenated water to the surface.",
   Response="Catch Q4 year t and Q1-2 year t+1",
   Cov="Average SST during Jun-Sep, Cum DD Jun-Sep in year t-1",
