--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -74,9 +74,9 @@ Precipitation data were obtained from two different sources.  The first was an e
 
 ## Hypotheses
 
-Environmental variability is known to be a key driver of population variability in small forage fish [@Bakun1996, @Curyetal2000, @Checkleyetal2017]. Based on biological information concerning how environmental conditions affect sardine survival and recruitment and affect exposure of sardines to the coastal fishery, we developed a set of hypotheses (Table `r ref("tab:hypotheses")` concerning which remote-sensing covariates in which months should correlate with landings in specific quarters.  The quarter 3 (Jul-Sep) catch overlaps the monsoon and the main spawning months.  This is also the quarter where small 0-year fish from early spawning (June) often appear in the catch, sometimes in large numbers.  Variables that are affect or are correlated with movement of sardines inshore should be correlated with quarter 3 landings.  In addition,  pre-spawning (Jan-May) conditions should be correlated with the spawning strength as adult oil sardines experience an acceleration of growth during this period along with egg development [.  Some researchers have also hypothesized that conditions in The post-monsoon catch (Oct-May) is primarily fish greater than 120mm and a mix of 0-yr fish (less than 12 months old) and mature fish (greater than 12 months old).  Variables that are correlated with larval and juvenile survival should correlate with the post-monsoon catch both in the current year and in futures years one to two years after.  
+Environmental variability is known to be a key driver of population variability in small forage fish [@Bakun1996; @Curyetal2000; @Checkleyetal2017]. Based on biological information concerning how environmental conditions affect sardine survival and recruitment and affect exposure of sardines to the coastal fishery, we developed a set of hypotheses (Table `r ref("tab:hypotheses")`) concerning which remote-sensing covariates in which months should correlate with landings in specific quarters.  The quarter 3 (Jul-Sep) catch overlaps the monsoon and the main spawning months.  This is also the quarter where small 0-year fish from early spawning (June) often appear in the catch, sometimes in large numbers.  Variables that are affect or are correlated with movement of sardines inshore should be correlated with quarter 3 landings.  In addition,  pre-spawning (Jan-May) conditions should be correlated with the spawning strength as adult oil sardines experience an acceleration of growth during this period along with egg development.  The post-monsoon catch (Oct-May) is a mix of 0-yr fish (less than 12 months old) and mature fish (greater than 12 months old).  Variables that are correlated with larval and juvenile survival should correlate with the post-monsoon catch both in the current year and in futures years one to two years after.  
 
-Our hypotheses (Table `r ref("tab:hypotheses")` focus mainly on two drivers: upwelling and ocean temperature.  We also test hypotheses concerning precipitation as this has historically been an environmental covariate considered to influence the timing of oil sardine landings.  Salinity has been proposed as responsible for spawning initiation; however we do not have long-term salinity data.
+Our hypotheses (Table `r ref("tab:hypotheses")`) focus mainly on two drivers: upwelling and ocean temperature.  We also test hypotheses concerning precipitation as this has historically been an environmental covariate considered to influence the timing of oil sardine landings.  Salinity has been proposed as responsible for spawning initiation; however we do not have long-term salinity data.
 
 <!--
 
@@ -128,12 +128,12 @@ We investigated correlations between environmental variables and sardine catch  
 The first step in our analysis was to determine the catch model: the model for current catch as a function of the past catch.  One feature of GAMs is that they allow the ‘flexibility’ or smoothing parameter of the response curve to be estimated. However we fixed the degree of flexibility so that reasonably smooth responses were achieved and to limit the flexibility of the models being fit.  Multi-modal or overly flexible response curves would not realistic for our application.  We used GAMs with smooth terms represented by penalized regression splines [@Wood2011, using the mgcv package in R] and fixed the smoothing term at an intermediate value (sp=0.6).
 
 Our catch models took the form
-\begin{gathered}
-random walk: ln(C_{i,t}) = \alpha + ln(C_{j,t-1})) + \epsilon\\
-AR-1: ln(C_{i,t}) = \alpha + \phi_1 ln(C_{j,t-1})) + \epsilon\\
-AR-2: ln(C_{i,t}) = \alpha + \phi_1 ln(C_{j,t-1})) + \phi_2 ln(C_{k,t-2})) + \epsilon\\
-non-linear: ln(C_{i,t}) = \alpha + s_1(ln(C_{j,t-1})) + s_2(ln(C_{k,t-2})) + \epsilon
-\end{gathered}
+
+* random walk: $ln(C_{i,t}) = \alpha + ln(C_{j,t-1})) + \epsilon$
+* AR-1: $ln(C_{i,t}) = \alpha + \phi_1 ln(C_{j,t-1})) + \epsilon$
+* AR-2: $ln(C_{i,t}) = \alpha + \phi_1 ln(C_{j,t-1})) + \phi_2 ln(C_{k,t-2})) + \epsilon$
+* non-linear: $ln(C_{i,t}) = \alpha + s_1(ln(C_{j,t-1})) + s_2(ln(C_{k,t-2})) + \epsilon$
+
 where $ln(C_{i,t})$ is the log catch in the current year $t$ in season $i$. We modeled two different seasons: 3rd quarter catch $C_{m,t}$ (Jul-Sep) which is during the late part of the summer monsoon and post-summer monsoon catch $C_{p,t}$ (Oct-Jun).  The catches were logged to stabilize and normalize the variance.  $s()$ is a non-linear function estimated by the GAM algorithm.  The model is primarily statistical, meaning it should not be thought of as being a population growth model.  We tested models with prior year post-summer monsoon catch ($C_{p,t-1}$) and 3rd quarter catch catch ($C_{m,t-1}$) as the explanatory catch variable. The catch models were fit to 1982 to 2015 catch data, corresponding to the years where the SST, upwelling and precipitation data were available.  F-tests and AIC on nested sets of models [@Woodetal2016] were used to evaluate the support for the catch models and later for the covariate models.  After selection the best model with the 1982-2015 data, the fitting was repeated with the 1955 to 1981 catch data to confirm the form of the catch models.
 
 Once the catch models were determined, the covariates were studied individually and then jointly. As with the catch models, F-tests and AIC on nested sets of GAM models [@Woodetal2016] were used to evaluate the support for models with covariates.  The smoothing term was fixed at an intermediate value (sp=0.6) instead of treated as an estimated variable.  Our models for catch with covariates took the form
