--- a/Table 1.Rmd
+++ b/Table 1.Rmd
@@ -61,7 +61,7 @@ ar1 = lm(spawners0 ~ spawners1, data=respdat)
 mod="ar1"
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $\\alpha$ + $\\betat ln(S_{t-1})$ + $\\epsilon$", 
+  Model="$ln(S_t)$ = $\\alpha$ + $\\beta ln(S_{t-1})$ + $\\epsilon$", 
   Residual.df=round(aa$df[2],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2="", 
